  * TODO: more ideas, mark some finished stuff off

* Wed Sep 03 09:35:40 2003, pabs <pabs@pablotron.org>
  * TODO: another thingy to do (clean sep of interfaces)
  * raggle: fix typo in web interface reported by Harry Ohlsen
    <harryo@qiqsolutions.com>

* Wed Sep 03 13:38:26 2003, pabs <pabs@pablotron.org>
  * raggle: slightly cleaner auto focus code in select_win_item

* Wed Sep 03 23:24:01 2003, heap <vaine@cs.helsinki.fi>
  * raggle.pod: fixed layout bugs in Synopsis and BUGS
  * Makefile: changed man-target to output raggle.1 instead 
    of raggle.1.new
  * raggle.1: ran 'make man'

* Wed Sep  3 17:03:27 2003, richlowe <richlowe@richlowe.net>
  * raggle.pod: Fixed layout bugs in AUTHORS and HISTORY (mainly, because
                Ville told me how)
  * raggle.1: regenerated.

* Wed Sep 03 21:18:23 2003, pabs <pabs@pablotron.org>
  * raggle: don't trap anything other than SIGINT on win32
  * raggle: use ENV['HOMEPATH'] on win32
  * raggle: cleaned up module loading
  * raggle: only die if both ncurses and webrick are missing

* Wed Sep 03 21:28:16 2003, pabs <pabs@pablotron.org>
  * raggle: added explorer.exe and netscape.exe to browser list
    (yes, i'm serious)

* Wed Sep 03 21:37:09 2003, pabs <pabs@pablotron.org>
  * raggle: evil method missing hack! (just a test to see if it'll
    get win32 people going w/o hackery)

* Wed Sep 03 21:42:18 2003, pabs <pabs@pablotron.org>
  * raggle: disabled method missing hack, added $HAVE_LIB['ncurses']
    wrapper to relevant $config{} stuff

* Wed Sep 03 21:45:04 2003, pabs <pabs@pablotron.org>
  * raggle: force web server if we're missing ncurses

* Wed Sep 03 22:09:16 2003, pabs <pabs@pablotron.org>
  * extras/web_ui/inc/*.css: render properly in IE, remove extra
    style entries

* Wed Sep 03 22:23:15 2003, pabs <pabs@pablotron.org>
  * in http server mode, die unless web_ui root dir exists

* Thu Sep 04 00:11:03 2003, pabs <pabs@pablotron.org>
  * raggle: added Path::find_web_ui_root (for win32)
