@@ -1,0 +1,3 @@
+@echo off
+cd %PROGRAMFILES%\Raggle
+ruby raggle --server
