@@ -1,0 +1,42 @@
+<?xml version="1.0" encoding="iso-8859-1"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
+  "http://www.w3.org/TR/xhtml10/DTD/xhtml10.dtd">
+
+<html>
+  <head>
+    <title>Raggle Windows Documentation</title>
+    <meta name='author'         content='Paul Duncan' />
+    <meta name='description'    content='Raggle Windows Documentation' />
+    <meta name='keywords'       content='rss channels feeds' />
+
+    <!--link title='default' href='extras/web_ui/inc/feed_list.css'
+      rel='stylesheet' type='text/css' /-->
+  </head>
+
+  <body bgcolor='#ffffff'>
+    <h1>Raggle Windows Documentation</h1>
+    
+    <p style='color: #ffffff'>
+      This will not run correctly! There will be bugs! You have been
+      warned!
+    </p>
+    
+    <p>
+      Steps to start <a href='http://www.raggle.org/'>Raggle</a>:
+
+      <ol>
+	      <li>Select <code>Raggle Server</code> from the Raggle Start Menu</li>
+	      <li>Select <code>Raggle Client</code> from the Raggle Start Menu</li>
+	      <li>Wait a few minutes while <a href='http://www.raggle.org/'>Raggle</a> updates feeds.</li>
+      </ol>
+    </p>
+
+    <p>
+      There are all sorts of bugs at the moment.  Some feeds don't
+      parse, the UI is counter-intuitive, a bunch of features aren't
+      accessible from the web interface, and there is a complete lack
+      of documentation.  But, it's a start.
+    </p>
+  </body>
+</html>
+
